src/App.css
* {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

h1 {
  font-size: 4rem;
}

section p {
  font-size: 1.5rem;
}

nav {
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100vw;
  background-color: #190A24;
  color: white;
  font-size: 1.2rem;
  font-weight: 500;
}

nav div {
  display: flex;
  align-items: center;
  width: 60%;
  padding: 1%;
}

nav div img {
  width: 3rem;
  margin-right: 3%;
}

nav ul {
  display: flex;
  justify-content: space-between;
  width: 20%;
  list-style-type: none;
  padding: 1%;
  margin-right: 1%;
}

nav a {
  color: rgb(158, 138, 178);
  transition: .3s;
  text-decoration: none;
}

nav a:visited {
  color: rgb(158, 138, 178);
}

nav a:hover {
  color: white;
}

nav a:active {
  color: white;
}




body {
  background-image: url("background.png") ;
  height: 5000px;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
}

section {
  display: flex;
  width: 1700px;
  border: solid red 1px;
}

.intro {
  margin-top: 100px;
}

.intro div {
  width: 40%;
  padding: 10% 0 10% 10% ;

}

.intro img {
  width: 600px;
  height: 450px;
  margin: 5%;
}


.about {
  display: flex;
  flex-direction: column;
}

.aboutText {
  width: 40%;
  padding: 10% 0 10% 10% ;
}

.largeSkillsContainer {
  display: flex;
  justify-content: center;
  border: solid red 1px;
}

.largeSkillTile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 250px;
  height: 250px;
  background-color: #190A24;
  padding: 20px;
  border-radius: 30px;
  text-align: center;
  margin: 2%;
}

.largeSkillTile p {
  font-size: 1.5rem;
  font-weight: 500;
}

.largeSkillTile img {
  width: 100px;
}

.smallSkillsContainer {
  display: flex;
  justify-content: center;
  border: solid red 1px;
  flex-wrap: wrap;
}

.smallSkillTile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 120px;
  height: 120px;
  background-color: #190A24;
  padding: 20px;
  border-radius: 30px;
}

.smallSkillTile img {
  width: 75px;
  margin-bottom: 10px;
}












.contact {
  display: flex;
  flex-direction: column;
}

.contact h1 {
  margin-left: 10%;
}

.contactRow2 {
  display: flex;
  justify-content: space-between;
}

.notificationIcons {
  width: 800px;
  margin-right: 150px;
}

.contactContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: #483165;
  border-radius: 30px;
  width: 400px;
  height: 550px;
  padding: 5%;
  box-sizing: border-box;
  margin-left: 200px;
  margin-top: 15px;
}

.contactForm {
  display: flex;
  align-items: center;
  background-color: #2e1b43;
  border-radius: 10px;
  padding: 3%;
}

.mailIcon {
height: 27px;
}

.profileIcon {
  height: 35px;
}

.messageIcon {
  height: 35px;
  margin: 5px 0 0 0;
}


.contactForm div,
.messageForm div {
  margin-left: 5%;
}

.contactForm input {
  all: unset;
  width: 95%;
  background-color: transparent;
  border: none;
  color: white;
}

.messageForm textArea {
  all: unset;
  width: 95%;
  resize: none;
  background-color: transparent;
  border: none;
  color: white;
}

.messageForm {
  display: flex;
  background-color: #2e1b43;
  border-radius: 10px;
  padding: 3%;
  height: 200px;
}

.contactContainer button{
  border-radius: 30px;
  width: 100%;
  background-color: #190b25;
  border: none;
  color: white;
  height: 50px;
  font-size: 1.2rem;
  font-weight: 600;
}

